Fixed wrapping of author names

--- a/less/blog-index.less
+++ b/less/blog-index.less
@@ -134,6 +134,10 @@
 @media (min-width: @screen-md-min) {
   .md-authors-menu {
     margin-top: @baseLineHeight;
+
+    li {
+      white-space: nowrap;
+    }
   }
 
   .md-categories-menu, .md-authors-menu {
